# tool_restful_client_connector

./: .travis.yml  CMakeLists.txt  CMakeLists_tizen.txt  CMakeLists_x86.txt  README.md  build.sh
RESTfulClientAPIs/: CMakeLists.txt
RESTfulClientAPIs/Implementation/: CloudClientCommon.cpp  CloudServer.cpp  HttpURLConnection.cpp  HttpURLConnectionFactory.cpp  HttpsURLConnection.cpp  HttpsURLConnectionFactory.cpp  RestCall.cpp  RestClient.cpp  RestClientContext.cpp  RestResource.cpp  ServerResponse.cpp
RESTfulClientAPIs/Interface/: CloudClientCommon.h  CloudServer.h  HttpURLConnection.h  HttpURLConnectionFactory.h  HttpsURLConnection.h  HttpsURLConnectionFactory.h  RestCall.h  RestClient.h  RestClientContext.h  RestResource.h  ServerResponse.h
RESTfulClientAPIs/Test/: CMakeLists.txt
RESTfulClientAPIs/Test/Unittest/: CMakeLists.txt
RESTfulClientAPIs/Test/Unittest/CCloudServerTest/: CCloudServerTest.cpp  CMakeLists.txt
RESTfulClientAPIs/Test/Unittest/CHttpURLConnectionTest/: CHttpURLConnectionTest.cpp  CMakeLists.txt
RESTfulClientAPIs/Test/Unittest/CRestClientTest/: CMakeLists.txt  CRestClientTest.cpp
RESTfulClientAPIs/Test/Unittest/CRestResourceTest/: CMakeLists.txt  CRestResourceTest.cpp
RESTfulClientAPIs/Test/Unittest/CServerResponseTest/: CMakeLists.txt  CServerResponseTest.cpp
Tools/: CMakeLists.txt
